force-app/main/default/objects/OAuth_Config__mdt/OAuth_Config__mdt.object-meta.xml
<CustomObject>
    <label>OAuth Config</label>
    <pluralLabel>OAuth Configs</pluralLabel>
    <description>Stores OAuth configuration for org-to-org authentication</description>
</CustomObject>