force-app/main/default/objects/OAuth_Config__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>OAuth Consumer Key / Client ID for connected app authentication</description>
    <label>Client ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>