force-app/main/default/objects/OAuth_Config__mdt/fields/Is_Configured__c.field-meta.xml
<CustomField>
    <fullName>Is_Configured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether OAuth configuration is complete and ready to use</description>
    <label>Is Configured</label>
    <type>Checkbox</type>
</CustomField>